// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Alert Variant error Should render an error alert 1`] = `
.emotion-3 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.75rem;
}

.emotion-4 {
  box-sizing: border-box;
  min-width: 0;
  background-color: #ffe9e7;
  border-color: #de5858;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.5rem;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 1.5rem;
  color: #921200;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    role="alert"
  >
    <span
      className="emotion-3"
      display="flex"
    >
      <span
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          size="sizeIcon30"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="15"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="15"
            >
              error: 
            </title>
            <path
              d="M12 2a9.968 9.968 0 017.06 2.918l.011.01.011.012a9.967 9.967 0 012.913 6.765L22 12c0 5.523-4.477 10-10 10a9.969 9.969 0 01-7.066-2.924l-.005-.005A9.973 9.973 0 012 12C2 6.477 6.477 2 12 2zm6.709 4L5.999 18.707a8.966 8.966 0 006 2.293c4.883 0 8.856-3.886 8.997-8.72l.004-.266-.004-.28A8.96 8.96 0 0018.709 6zm-6.71-3A9 9 0 003 12c0 2.305.867 4.408 2.292 6L18 5.293A8.97 8.97 0 0012 3z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        className="emotion-2"
      >
        This is an error alert
      </span>
    </span>
  </div>
</div>
`;

exports[`Alert Variant error Should render an error alert with dismiss button 1`] = `
.emotion-7 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-9 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-9 *,
.emotion-9 *::after,
.emotion-9 *::before {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.75rem;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 1.5rem;
  color: #666a6d;
}

.emotion-6 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: 1.5rem;
}

.emotion-5 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background: none;
  color: #005ea6;
  width: auto;
}

.emotion-5::-moz-focus-inner {
  border: none;
}

.emotion-5:focus,
.emotion-5:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-5:hover,
.emotion-5:focus,
.emotion-5:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover,
.emotion-5:focus,
.emotion-5:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:hover {
  color: #003e82;
}

.emotion-5:active {
  color: #032c5e;
}

.emotion-4 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-8 {
  box-sizing: border-box;
  min-width: 0;
  background-color: #ffe9e7;
  border-color: #de5858;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.5rem;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 1.5rem;
  color: #921200;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
    role="alert"
  >
    <span
      className="emotion-7"
      display="flex"
    >
      <span
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          size="sizeIcon30"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="16"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="16"
            >
              error: 
            </title>
            <path
              d="M12 2a9.968 9.968 0 017.06 2.918l.011.01.011.012a9.967 9.967 0 012.913 6.765L22 12c0 5.523-4.477 10-10 10a9.969 9.969 0 01-7.066-2.924l-.005-.005A9.973 9.973 0 012 12C2 6.477 6.477 2 12 2zm6.709 4L5.999 18.707a8.966 8.966 0 006 2.293c4.883 0 8.856-3.886 8.997-8.72l.004-.266-.004-.28A8.96 8.96 0 0018.709 6zm-6.71-3A9 9 0 003 12c0 2.305.867 4.408 2.292 6L18 5.293A8.97 8.97 0 0012 3z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        className="emotion-2"
      >
        This is an error alert
      </span>
      <span
        className="emotion-6"
        display="flex"
      >
        <button
          aria-busy="false"
          className="emotion-5"
          disabled={false}
          onClick={[MockFunction]}
          size="reset"
          type="button"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-3"
              size="sizeIcon30"
            >
              <svg
                aria-hidden={false}
                aria-labelledby="17"
                height="100%"
                role="img"
                viewBox="0 0 24 24"
                width="100%"
              >
                <title
                  id="17"
                >
                  dismiss this alert
                </title>
                <path
                  d="M18.01 5.99c.17.169.189.432.057.622l-.051.062-5.327 5.325 5.327 5.327c.19.19.185.494-.006.684a.488.488 0 01-.622.057l-.062-.051L12 12.689l-5.326 5.327a.481.481 0 01-.684-.006.488.488 0 01-.057-.622l.051-.062L11.311 12 5.984 6.674a.481.481 0 01.006-.684.488.488 0 01.622-.057l.062.051L12 11.31l5.326-5.326a.481.481 0 01.684.006z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`Alert Variant neutral Should render a neutral alert 1`] = `
.emotion-3 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-4 {
  box-sizing: border-box;
  min-width: 0;
  background-color: #f5f8ff;
  border-color: #c8cccf;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.5rem;
}

.emotion-1 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.75rem;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 1.5rem;
  color: #666a6d;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    role="status"
  >
    <span
      className="emotion-3"
      display="flex"
    >
      <span
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          size="sizeIcon30"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="9"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="9"
            >
              information: 
            </title>
            <path
              d="M12 2c5.522 0 10 4.478 10 10s-4.478 10-10 10C6.477 22 2 17.523 2 12S6.477 2 12 2zm0 .994A9.006 9.006 0 002.994 12 9.007 9.007 0 1012 2.994zm.24 7.506a.5.5 0 01.491.41l.008.09v5.25h2.133a.5.5 0 01.09.992l-.09.008H9.628a.5.5 0 01-.09-.992l.09-.008h2.111V11.5H10.5a.5.5 0 01-.492-.41L10 11a.5.5 0 01.41-.492l.09-.008h1.74zm-.405-3.745a.935.935 0 110 1.87.935.935 0 010-1.87z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        className="emotion-2"
      >
        This is an alert
      </span>
    </span>
  </div>
</div>
`;

exports[`Alert Variant neutral Should render a neutral alert with dismiss button 1`] = `
.emotion-7 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-9 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-9 *,
.emotion-9 *::after,
.emotion-9 *::before {
  box-sizing: border-box;
}

.emotion-8 {
  box-sizing: border-box;
  min-width: 0;
  background-color: #f5f8ff;
  border-color: #c8cccf;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.5rem;
}

.emotion-1 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.75rem;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 1.5rem;
  color: #666a6d;
}

.emotion-6 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: 1.5rem;
}

.emotion-5 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background: none;
  color: #005ea6;
  width: auto;
}

.emotion-5::-moz-focus-inner {
  border: none;
}

.emotion-5:focus,
.emotion-5:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-5:hover,
.emotion-5:focus,
.emotion-5:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover,
.emotion-5:focus,
.emotion-5:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:hover {
  color: #003e82;
}

.emotion-5:active {
  color: #032c5e;
}

.emotion-4 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
    role="status"
  >
    <span
      className="emotion-7"
      display="flex"
    >
      <span
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          size="sizeIcon30"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="10"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="10"
            >
              information: 
            </title>
            <path
              d="M12 2c5.522 0 10 4.478 10 10s-4.478 10-10 10C6.477 22 2 17.523 2 12S6.477 2 12 2zm0 .994A9.006 9.006 0 002.994 12 9.007 9.007 0 1012 2.994zm.24 7.506a.5.5 0 01.491.41l.008.09v5.25h2.133a.5.5 0 01.09.992l-.09.008H9.628a.5.5 0 01-.09-.992l.09-.008h2.111V11.5H10.5a.5.5 0 01-.492-.41L10 11a.5.5 0 01.41-.492l.09-.008h1.74zm-.405-3.745a.935.935 0 110 1.87.935.935 0 010-1.87z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        className="emotion-2"
      >
        This is an alert
      </span>
      <span
        className="emotion-6"
        display="flex"
      >
        <button
          aria-busy="false"
          className="emotion-5"
          disabled={false}
          onClick={[MockFunction]}
          size="reset"
          type="button"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-0"
              size="sizeIcon30"
            >
              <svg
                aria-hidden={false}
                aria-labelledby="11"
                height="100%"
                role="img"
                viewBox="0 0 24 24"
                width="100%"
              >
                <title
                  id="11"
                >
                  dismiss this alert
                </title>
                <path
                  d="M18.01 5.99c.17.169.189.432.057.622l-.051.062-5.327 5.325 5.327 5.327c.19.19.185.494-.006.684a.488.488 0 01-.622.057l-.062-.051L12 12.689l-5.326 5.327a.481.481 0 01-.684-.006.488.488 0 01-.057-.622l.051-.062L11.311 12 5.984 6.674a.481.481 0 01.006-.684.488.488 0 01.622-.057l.062.051L12 11.31l5.326-5.326a.481.481 0 01.684.006z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;

exports[`Alert Variant warning Should render an warning alert 1`] = `
.emotion-3 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-5 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-5 *,
.emotion-5 *::after,
.emotion-5 *::before {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.75rem;
}

.emotion-4 {
  box-sizing: border-box;
  min-width: 0;
  background-color: #ffecd8;
  border-color: #f28510;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.5rem;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 1.5rem;
  color: #a83e00;
}

<div
  className="emotion-5"
>
  <div
    className="emotion-4"
    role="alert"
  >
    <span
      className="emotion-3"
      display="flex"
    >
      <span
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          size="sizeIcon30"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="21"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="21"
            >
              warning: 
            </title>
            <path
              d="M11.546 2.267a.52.52 0 01.908 0L21.946 20.3c.169.321-.077.7-.454.7H2.508c-.377 0-.623-.379-.454-.7zM12 3.56L3.33 20.033h17.34L12 3.561zM12.005 16a.935.935 0 110 1.87.935.935 0 010-1.87zM12 9c.245 0 .45.155.492.359l.008.078v4.126c0 .241-.224.437-.5.437-.245 0-.45-.155-.492-.359l-.008-.078V9.437c0-.241.224-.437.5-.437z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        className="emotion-2"
      >
        This is an warning alert
      </span>
    </span>
  </div>
</div>
`;

exports[`Alert Variant warning Should render an warning alert with dismiss button 1`] = `
.emotion-7 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-2 {
  box-sizing: border-box;
  min-width: 0;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.emotion-9 {
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-size: 0.875rem;
  line-height: 1.5rem;
  color: #282a2b;
  font-weight: 400;
}

.emotion-9 *,
.emotion-9 *::after,
.emotion-9 *::before {
  box-sizing: border-box;
}

.emotion-1 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-right: 0.75rem;
}

.emotion-3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 1.5rem;
  color: #666a6d;
}

.emotion-6 {
  box-sizing: border-box;
  min-width: 0;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  margin-left: 1.5rem;
}

.emotion-5 {
  position: relative;
  font-size: 100%;
  padding: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  border: none;
  display: inline-block;
  outline: none;
  background: none;
  -webkit-transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  transition: background-color 100ms ease-in,box-shadow 100ms ease-in;
  font-family: 'Whitney SSm A','Whitney SSm B','Helvetica Neue',Helvetica,Arial,sans-serif;
  font-weight: 500;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  background: none;
  color: #005ea6;
  width: auto;
}

.emotion-5::-moz-focus-inner {
  border: none;
}

.emotion-5:focus,
.emotion-5:active {
  box-shadow: 0 0 0 4px rgba(2,122,197,0.8);
}

.emotion-5:hover,
.emotion-5:focus,
.emotion-5:active {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover,
.emotion-5:focus,
.emotion-5:active {
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

.emotion-5:hover {
  color: #003e82;
}

.emotion-5:active {
  color: #032c5e;
}

.emotion-4 {
  display: grid;
  grid-auto-flow: column;
  -webkit-column-gap: 0.25rem;
  column-gap: 0.25rem;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  vertical-align: middle;
  -webkit-text-decoration: inherit;
  text-decoration: inherit;
  opacity: 100%;
}

.emotion-8 {
  box-sizing: border-box;
  min-width: 0;
  background-color: #ffecd8;
  border-color: #f28510;
  border-bottom-width: 2px;
  border-bottom-style: solid;
  padding-left: 1.5rem;
  padding-right: 1.5rem;
  padding-top: 0.75rem;
  padding-bottom: 0.5rem;
}

.emotion-0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  width: 1.5rem;
  height: 1.5rem;
  color: #a83e00;
}

<div
  className="emotion-9"
>
  <div
    className="emotion-8"
    role="alert"
  >
    <span
      className="emotion-7"
      display="flex"
    >
      <span
        className="emotion-1"
        display="flex"
      >
        <span
          className="emotion-0"
          size="sizeIcon30"
        >
          <svg
            aria-hidden={false}
            aria-labelledby="22"
            height="100%"
            role="img"
            viewBox="0 0 24 24"
            width="100%"
          >
            <title
              id="22"
            >
              warning: 
            </title>
            <path
              d="M11.546 2.267a.52.52 0 01.908 0L21.946 20.3c.169.321-.077.7-.454.7H2.508c-.377 0-.623-.379-.454-.7zM12 3.56L3.33 20.033h17.34L12 3.561zM12.005 16a.935.935 0 110 1.87.935.935 0 010-1.87zM12 9c.245 0 .45.155.492.359l.008.078v4.126c0 .241-.224.437-.5.437-.245 0-.45-.155-.492-.359l-.008-.078V9.437c0-.241.224-.437.5-.437z"
              fill="currentColor"
              fillRule="evenodd"
            />
          </svg>
        </span>
      </span>
      <span
        className="emotion-2"
      >
        This is an warning alert
      </span>
      <span
        className="emotion-6"
        display="flex"
      >
        <button
          aria-busy="false"
          className="emotion-5"
          disabled={false}
          onClick={[MockFunction]}
          size="reset"
          type="button"
        >
          <span
            className="emotion-4"
          >
            <span
              className="emotion-3"
              size="sizeIcon30"
            >
              <svg
                aria-hidden={false}
                aria-labelledby="23"
                height="100%"
                role="img"
                viewBox="0 0 24 24"
                width="100%"
              >
                <title
                  id="23"
                >
                  dismiss this alert
                </title>
                <path
                  d="M18.01 5.99c.17.169.189.432.057.622l-.051.062-5.327 5.325 5.327 5.327c.19.19.185.494-.006.684a.488.488 0 01-.622.057l-.062-.051L12 12.689l-5.326 5.327a.481.481 0 01-.684-.006.488.488 0 01-.057-.622l.051-.062L11.311 12 5.984 6.674a.481.481 0 01.006-.684.488.488 0 01.622-.057l.062.051L12 11.31l5.326-5.326a.481.481 0 01.684.006z"
                  fill="currentColor"
                  fillRule="evenodd"
                />
              </svg>
            </span>
          </span>
        </button>
      </span>
    </span>
  </div>
</div>
`;
